Вторая попытка выполнить третье задание

--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -1,8 +1,14 @@
+.button {
+
+}
+
 .button--download {
   display: inline-block;
+  vertical-align: middle;
   padding-bottom: 32px;
-  font-family: OpenSansBold;
+  font-family: OpenSansBold, Arial, sans-serif;
   font-size: 18px;
+  font-weight: bold;
   text-decoration: none;
   line-height: 18px;
   color: #ffffff;
