--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -9,7 +9,7 @@
 
 .contacts__item-headline {
   padding-bottom: 45px;
-  font-family: OpenSansLight;
+  font-family: OpenSansLight, Arial, sans-serif;
   font-size: 24px;
 }
 
@@ -18,12 +18,13 @@
 }
 
 .contacts__item b {
-  font-family: OpenSansBold;
+  font-family: OpenSansBold, Arial, sans-serif;
   font-size: 18px;
+  font-weight: bold;
 }
 
 .contacts__item p {
-  font-family: OpenSansLight;
+  font-family: OpenSansLight, Arial, sans-serif;
   font-size: 24px;
   color: #d22856;
 }
