--- a/sass/blocks/pink-contest.scss
+++ b/sass/blocks/pink-contest.scss
@@ -6,16 +6,16 @@
 
 .pink-contest__headline {
   width: 275px;
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   color: #283645;
 }
 
 .pink-contest__form-label {
-  display: inline-block;
+  display: block;
   margin-bottom: 15px;
-  font-family: OpenSansLight;
+  font-family: OpenSansLight, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   color: #d22856;
