--- a/sass/blocks/pink-intro.scss
+++ b/sass/blocks/pink-intro.scss
@@ -7,21 +7,22 @@
 
 .pink-intro__headline {
   padding-bottom: 120px;
-  font-family: OpenSansLight;
+  font-family: OpenSansLight, Arial, sans-serif;
   font-size: 24px;
   color: #283645;
 }
 
 .pink-intro__item h2 {
-  font-family: OpenSansBold;
+  font-family: OpenSansBold, Arial, sans-serif;
   font-size: 18px;
+  font-weight: bold;
   color: #283645;
 }
 
 .pink-intro__item p {
   width: 274px;
   padding-bottom: 40px;
-  font-family: OpenSansLight;
+  font-family: OpenSansLight, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #283645;
