--- a/sass/blocks/achievements.scss
+++ b/sass/blocks/achievements.scss
@@ -3,7 +3,7 @@
 }
 
 .achievements__headline {
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: #d22856;
@@ -11,7 +11,7 @@
 
 .achievements__list {
   list-style-type: none;
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 18px;
   line-height: 30px;
   color: #283645;
