--- a/sass/blocks/app-download.scss
+++ b/sass/blocks/app-download.scss
@@ -7,7 +7,7 @@
 }
 
 .app-download__description {
-  font-family: OpenSansLight;
+  font-family: OpenSansLight, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #ffffff;
