--- a/sass/blocks/apps.scss
+++ b/sass/blocks/apps.scss
@@ -1,6 +1,6 @@
 .apps__headline {
   padding-bottom: 50px;
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: #d22856;
@@ -10,10 +10,10 @@
   list-style-type: none;
 }
 
-.apps__list li {
+.apps__list-item {
   padding-bottom: 60px;
 }
 
-.apps__list li:last-child {
+.apps__list-item:last-child {
   padding-bottom: 95px;
 }
