--- a/sass/blocks/entry-review.scss
+++ b/sass/blocks/entry-review.scss
@@ -1,5 +1,5 @@
 .entry-review__headline {
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   color: #d22856;
