--- a/sass/blocks/featured-item.scss
+++ b/sass/blocks/featured-item.scss
@@ -2,8 +2,9 @@
   width: 140px;
   height: 35px;
   background-color: #d22856;
-  font-family: OpenSansBold;
+  font-family: OpenSansBold, Arial, sans-serif;
   font-size: 12px;
+  font-weight: bold;
   line-height: 24px;
   color: #ffffff;
 }
