--- a/sass/blocks/incentive.scss
+++ b/sass/blocks/incentive.scss
@@ -1,6 +1,6 @@
 .incentive {
   padding-bottom: 72px;
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   color: #283645;
