--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -6,7 +6,7 @@
 }
 
 .main-header__logo {
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   text-transform: uppercase;
@@ -16,7 +16,7 @@
 .main-header__headline {
   width: 230px;
   padding-bottom: 53px;
-  font-family: OpenSansLight;
+  font-family: OpenSansLight, Arial, sans-serif;
   font-size: 24px;
   color: #ffffff;
 
