--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,6 +1,7 @@
 .main-nav__items {
-  font-family: OpenSansBold;
+  font-family: OpenSansBold, Arial, sans-serif;
   font-size: 18px;
+  font-weight: bold;
   line-height: 32px;
   text-transform: uppercase;
   color: #ffffff;
