--- a/sass/blocks/photo-content.scss
+++ b/sass/blocks/photo-content.scss
@@ -7,7 +7,7 @@
 .photo-content__headline {
   padding-top: 55px;
   padding-bottom: 55px;
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   color: #283645;
@@ -18,28 +18,29 @@
 }
 
 .photo-content__item-headline {
-  font-family: OpenSansBold;
+  font-family: OpenSansBold, Arial, sans-serif;
   font-size: 12px;
+  font-weight: bold;
   line-height: 24px;
   color: #283645;
 }
 
 .item-date {
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   color: #283645;
 }
 
 .photo-content__item-text {
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   color: #283645;
 }
 
 .photo-content__item-footer p {
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 12px;
   line-height: 24px;
   color: #d22856;
