--- a/sass/blocks/pink-prices.scss
+++ b/sass/blocks/pink-prices.scss
@@ -13,7 +13,7 @@
 
 .pink-prices__item h2 {
   margin: 0;
-  font-family: OpenSansBold;
+  font-family: OpenSansBold, Arial, sans-serif;
   font-size: 18px;
   line-height: 30px;
   text-transform: uppercase;
@@ -22,7 +22,7 @@
 
 .pink-prices__item p {
   margin: 0;
-  font-family: OpenSansLight;
+  font-family: OpenSansLight, Arial, sans-serif;
   font-size: 24px;
   line-height: 30px;
   color: #ffffff;
@@ -36,11 +36,9 @@
 .pink-intro__item-list li {
   padding-top: 24px;
   padding-bottom: 24px;
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 30px;
   text-transform: uppercase;
   color: #283645;
 }
-
-
