--- a/sass/blocks/pink-reviews.scss
+++ b/sass/blocks/pink-reviews.scss
@@ -6,8 +6,9 @@
 
 .pink-reviews__item h2 {
   margin: 0;
-  font-family: OpenSansBold;
+  font-family: OpenSansBold, Arial, sans-serif;
   font-size: 18px;
+  font-weight: bold;
   line-height: 30px;
   color: #283645;
 }
@@ -15,7 +16,7 @@
 .pink-reviews__item p {
   width: 280px;
   padding-bottom: 40px;
-  font-family: OpenSans;
+  font-family: OpenSans, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #283645;
