--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -1,8 +1,5 @@
 .main-header {
-  background: url("../img/bg-back-mobile@1x.jpg") no-repeat 50%;
-  background-size: cover;
-  border: 2px solid red;
-  width: 320px;
+  min-height: 462px;
 }
 
 .main-header__logo {
@@ -11,6 +8,18 @@
   line-height: 30px;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+.main-header__image {
+  margin: 0;
+}
+
+.main-header__image-tablet {
+  display: none;
+}
+
+.main-header__image-desktop {
+  display: none;
 }
 
 .main-header__headline {
@@ -22,5 +31,117 @@
 
   &-photos {
     padding-bottom: 88px;
+  }
+}
+
+.main-header-pages__headline {
+  width: 230px;
+  padding-bottom: 53px;
+  font-family: OpenSansLight, Arial, sans-serif;
+  font-size: 24px;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 320px) {
+  .header-wrapper {
+    background: url("../img/bg-back-mobile@1x.jpg") no-repeat center center;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .header-wrapper {
+    background: url("../img/bg-back-tablet@1x.jpg") no-repeat center center;
+    background-size: cover;
+  }
+
+  .main-header {
+    min-height: 730px;
+  }
+
+  .motto {
+    display: block;
+    width: 195px;
+    padding-left: 38px;
+    padding-bottom: 40px;
+    font-family: OpenSansLight, Arial, sans-serif;
+    font-size: 40px;
+    color: #ffffff;
+    text-align: center;
+  }
+
+  .main-header__image {
+    display: none;
+  }
+
+  .main-header__image-tablet {
+    display: block;
+    position: absolute;
+    top: 184px;
+    right: 45px;
+  }
+
+  .main-header__headline {
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+  }
+
+  .app-download {
+    position: absolute;
+    top: -576px;
+    left: 0;
+    background: none;
+    border: none;
+  }
+
+  .button--download {
+    padding-bottom: 45px;
+  }
+
+  .app-download__platforms {
+    padding-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-wrapper {
+    background: url("../img/bg-back-desktop@1x.jpg") no-repeat center center;
+    background-size: cover;
+  }
+
+  .main-header {
+    min-height: 852px;
+  }
+
+  .main-header__image-tablet {
+    display: none;
+  }
+
+  .main-header__image-desktop {
+    display: block;
+    position: absolute;
+    top: 207px;
+    right: 42px;
+  }
+
+  .motto {
+    padding-bottom: 80px;
+  }
+
+  .app-download {
+    position: absolute;
+    top: -660px;
+    left: 0px;
+    background: none;
+    border: none;
+  }
+
+  .button--download {
+    padding-bottom: 65px;
+  }
+
+  .app-download__platforms {
+    padding-bottom: 60px;
   }
 }
