--- a/sass/blocks/pink-contest.scss
+++ b/sass/blocks/pink-contest.scss
@@ -1,5 +1,4 @@
 .pink-contest {
-  width: 320px;
   padding-bottom: 75px;
   border: 2px solid red;
 }
@@ -23,4 +22,46 @@
 
 .pink-contest__form-input {
   margin-bottom: 27px;
+}
+
+@media screen and (min-width: 700px) {
+  .pink-contest {
+    text-align: center;
+  }
+
+  .pink-contest__headline {
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  .pink-contest__form {
+    text-align: left;
+  }
+
+  .pink-contest__form-label {
+    display: inline-block;
+    vertical-align: baseline;
+  }
+
+  .pink-contest__form-input {
+    width: 525px;
+    padding-top: 22px;
+    padding-bottom: 22px;
+    padding-left: 20px;
+  }
+
+  .pink-contest__form-input:nth-child(4) {
+    width: 558px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .pink-contest__form-input {
+    width: 375px;
+  }
+
+  .pink-contest__form-input:nth-child(4) {
+    width: 410px;
+  }
 }
