--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,17 +1,23 @@
 @import "normalize.scss";
+@import "mixins.scss";
+@import "variables.scss";
 @import "global/fonts.scss";
 
 @import "blocks/achievements.scss";
 @import "blocks/app-download.scss";
 @import "blocks/apps.scss";
 @import "blocks/button.scss";
+@import "blocks/contacts-info.scss";
 @import "blocks/contacts.scss";
+@import "blocks/credentials.scss";
 @import "blocks/entry-review.scss";
 @import "blocks/featured-item.scss";
 @import "blocks/footer.scss";
+@import "blocks/header-wrapper.scss";
 @import "blocks/incentive.scss";
 @import "blocks/like-button.scss";
 @import "blocks/main-footer.scss";
+@import "blocks/main-header-pages.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/main-page-content.scss";
