--- a/sass/blocks/achievements.scss
+++ b/sass/blocks/achievements.scss
@@ -16,3 +16,16 @@
   line-height: 30px;
   color: #283645;
 }
+
+@media screen and (min-width: 700px) {
+  .achievements {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .achievements {
+    padding-top: 0;
+    float: left;
+  }
+}
