--- a/sass/blocks/app-download.scss
+++ b/sass/blocks/app-download.scss
@@ -1,14 +1,25 @@
 .app-download {
-  width: 320px;
   padding-top: 28px;
   padding-bottom: 36px;
   background-color: #1d2631;
   border: 2px solid red;
+  text-align: center;
 }
 
 .app-download__description {
+  width: 280px;
   font-family: OpenSansLight, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #ffffff;
+
+}
+
+@media screen and (max-width: 699px) {
+  .motto {
+    display: none;
+    font-family: OpenSansLight, Arial, sans-serif;
+    font-size: 40px;
+    color: #ffffff;
+  }
 }
