--- a/sass/blocks/featured-item.scss
+++ b/sass/blocks/featured-item.scss
@@ -1,4 +1,8 @@
 .featured-item {
+  display: inline-block;
+}
+
+.featured-item-headline {
   width: 140px;
   height: 35px;
   background-color: #d22856;
