--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -1,5 +1,5 @@
 .main-footer {
-  width: 320px;
+  text-align: center;
   border: 2px solid red;
 }
 
@@ -27,4 +27,10 @@
   font-family: OpenSansLight, Arial, sans-serif;
   font-size: 24px;
   color: #d22856;
+}
+
+@media screen and (min-width: 700px) {
+  .contacts__item {
+    display: inline-block;
+  }
 }
