--- a/sass/blocks/pink-prices.scss
+++ b/sass/blocks/pink-prices.scss
@@ -1,10 +1,9 @@
 .pink-prices {
   padding-bottom: 93px;
-  width: 320px;
   border: 2px solid red;
 }
 
-.pink-intro__item-headline {
+.pink-prices__item-headline {
   padding-top: 25px;
   padding-bottom: 25px;
   text-align: center;
@@ -33,7 +32,7 @@
   list-style-type: none;
 }
 
-.pink-intro__item-list li {
+.pink-prices__item-list li {
   padding-top: 24px;
   padding-bottom: 24px;
   font-family: OpenSans, Arial, sans-serif;
@@ -41,4 +40,24 @@
   line-height: 30px;
   text-transform: uppercase;
   color: #283645;
+}
+
+@media screen and (min-width: 320px) {
+  .pink-prices__item:nth-child(n+2) {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .pink-prices__item {
+    float: left;
+  }
+
+  .pink-prices__item:nth-child(n+2) {
+    display: inline-block;
+  }
+
+  .pink-prices__item .slider-input {
+    display: none;
+  }
 }
